--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                     calendarCount: 2,
                 },
                 on: {
-                    onShow(){
+                     onShow(){
                         if (webix.env.mobile && webix.env.touch){
                             const documentWidth = document.body.clientWidth;
-                            if (parseInt(this.$view.style.width) > documentWidth) {
+                            if (parseInt(this.$view.style.width) >= documentWidth) {
                                 this.$view.style.width = `${documentWidth}px`;
                                 this.$view.style.left = 0;
                                 this.$view.querySelector('.webix_win_body').style.overflowX = 'scroll';
