--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             const documentWidth = document.body.clientWidth;
                             if (parseInt(this.$view.style.width) >= documentWidth) {
                                 this.$view.style.width = `${documentWidth}px`;
-                                this.$view.style.left = 0;
+                                this.setPosition(0, parseInt(this.$view.style.top));
                                 this.$view.querySelector('.webix_win_body').style.overflowX = 'scroll';
                             }
                         }   
