--- a/index.html
+++ b/index.html
@@ -12,92 +12,38 @@
 
 <body>
     <script>
-    webix.ui({
-        view: "daterangepicker",
-        id: "myPicker",
-        name: "custom",
-        label: "Custom"
-    });
+    function img(obj){
+  return '<img src="'+obj.src+'" class="content" ondragstart="return false"/><div class="title">'+obj.title+'</div>'
+}
 
-    const dateRange = $$('myPicker').getPopup();
-    //Please notice, that we've replaced arrow function.
-    dateRange.attachEvent('onShow', function() {
-    if (webix.env.mobile && webix.env.touch) {
-    const documentWidth = document.body.clientWidth;
-    if (parseInt(this.$view.style.width) >= documentWidth) {
-          this.$view.style.width = `${documentWidth}px`;
-          this.setPosition(0, parseInt(this.$view.style.top));
-          this.$view.querySelector('.webix_win_body').style.overflowX = 'scroll';
-        }
-    }
-    });
-//       webix.ui({
-//             view: "daterangepicker",
-//             id: "myDateRange",
-//             name: "custom",
-//             label: "Custom",
-//             suggest: {
-//                 view: "daterangesuggest",
-//                 body: {
-//                     calendarCount: 2,
-//                 },
-//                 on: {
-//                      onShow(){
-//                         if (webix.env.mobile && webix.env.touch){
-//                             const documentWidth = document.body.clientWidth;
-//                             if (parseInt(this.$view.style.width) >= documentWidth) {
-//                                 this.$view.style.width = `${documentWidth}px`;
-//                                 this.setPosition(0, parseInt(this.$view.style.top));
-//                                 this.$view.querySelector('.webix_win_body').style.overflowX = 'scroll';
-//                             }
-//                         }   
-//                     }
-//                 }
-//             }
-//         });
-//         webix.protoUI({
-//   name:"scrollableSuggest",
-//   defaults: {
-//     type:"scrollview",
-//     fitMaster: true,
-//     body: {
-//       view: "scrollview", 
-//       scroll :"x",
-//       body: {
-//         view:"daterange", icons:true, button:true, borderless:true,
-//         width: 500,
-//       }
-//     }
-//   },
-//   $init(){    
-//     this.$ready.push(() => {
-//       const button = this.getButton();
-//       if (button.attachEvent){
-//         button.attachEvent("onItemClick", () => {
-//           this.hide()
-//         })
-//       }
-//     })
-//   },
-//   getRange(){
-//     // get body of popup => get body of scrollview
-//     return this.getBody().getBody();
-//   },
-//   getButton(){
-//     // button or spacer (if "button" set to false)
-//     return this.getRange().getChildViews()[1].getChildViews()[1];
-//   },
-// }, webix.ui.daterangesuggest)
-
-// webix.ui({
-//   view: "daterangepicker",
-//   id: "myDateRange",
-//   name: "custom",
-//   label: "Custom",
-//   suggest: {
-//     view: "scrollableSuggest",
-//   }
-// });
+webix.ui({
+  view:"scrollview", 
+  id:"scrollview", 
+  scroll:"y", 
+  height: 250,
+  body:{
+    rows:[
+      {template:"Lorem ipsum", autoheight:true},
+      {template:"Lorem ipsum dolor sit amet", autoheight:true},
+      {template:"Lorem ipsum dolor", autoheight:true},
+      {
+        view:"carousel",
+        css:"webix_dark",
+        height: 250,
+        cols:[
+          { css: "image", template:img, data:{src:"http://docs.webix.com/samples/26_carousel/imgs/image001.jpg", title: "Image 1"} },
+          { css: "image", template:img, data:{src:"http://docs.webix.com/samples/26_carousel/imgs/image002.jpg", title: "Image 2"} },
+          { css: "image", template:img, data:{src:"http://docs.webix.com/samples/26_carousel/imgs/image003.jpg", title: "Image 3"} },
+          { css: "image", template:img, data:{src:"http://docs.webix.com/samples/26_carousel/imgs/image004.jpg", title: "Image 4"} },
+          { css: "image", template:img, data:{src:"http://docs.webix.com/samples/26_carousel/imgs/image005.jpg", title: "Image 5"} },
+          { css: "image", template:img, data:{src:"http://docs.webix.com/samples/26_carousel/imgs/image006.jpg", title: "Image 6"} }
+        ]
+      },
+      {template:"<h2>height: 300;<h2>", height: 300},
+      {template:"Lorem ipsum dolor sit amet, mentitum", autoheight:true},
+    ]
+  }
+})
 
     </script>
 </body>
