--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <title>Document</title>
+    <style>
+        .footer {
+            background-color: cadetblue;
+            padding-bottom: 10px;
+            text-align: center;
+            position: absolute;
+            /* bottom: 0; */
+            top: 0
+        }
+    </style>
 </head>
 
 <body>
@@ -20,55 +30,45 @@
             id: "scrollview",
             scroll: "y",
             scrollSpeed: "300ms",
+            scrollState: 0,
             body: {
                 rows: [
                     { template: "<h1>header</h1>", autoheight: true },
                     { template: "<h1>navigation</h1>", autoheight: true },
                     { template: "<h1>body</h1>", height: 800 },
-                    {
-                        template: `<div id="paymentIframe"><iframe src="https://www.bing.com/" frameborder="0" style="border:1; width:90%;height:600px;position:absolute;z-index:9999;" allowfullscreen=""></iframe></div>`,
-                        height: 600
-                    },
                     { template: "<h1>Other content<h1>", height: 400 },
-                    { template: "<h1>footer</h1>", autoheight: true }
+                    {
+                        template: "<h1>footer</h1>",
+                        id: "footer",
+                        autoheight: true,
+                        css: 'footer',
+                        on: {
+                            onAfterRender() {
+                                this.$view.style.top = `${window.innerHeight - this.$height}.px`;
+                                const self = this;
+
+                                // $$("scrollview").$view.addEventListener('scroll', function (e) {
+                                //     const { x, y } = $$("scrollview").getScrollState();
+                                //     const height = window.innerHeight - self.$height + y;
+                                //     self.$view.style.top = `${height}px`
+                                // })
+                            }
+                        }
+                    }
                 ]
+            },
+            on: {
+                onAfterScroll() {
+                    const { x, y } = this.getScrollState();
+                    y > this.config.scrollState ? $$('footer').hide() : $$('footer').show();
+                    if ($$('footer').isVisible()) {
+                        const height = window.innerHeight - $$('footer').$height + y;
+                        $$('footer').$view.style.top = `${height}px`
+                    }
+                    this.config.scrollState = y
+                }
             }
         });
-
-
-//         webix.ui({
-//             view: "scrollview",
-//             id: "scrollview",
-//             scroll: "y",
-//             scrollSpeed: "300ms",
-//             body: {
-//                 rows: [
-//                     { template: "<h1>header</h1>", autoheight: true },
-//                     { template: "<h1>navigation</h1>", autoheight: true },
-//                     { template: "<h1>body</h1>", height: 800 },
-//                     {
-//                         view: "iframe",
-//                         id: "frame-body",
-//                         src: "https://www.bing.com/",
-//                         height: 500,
-//                         on: {
-//                             onAfterLoad() {
-//                                 if (window.innerWidth < 768) {
-//                                     this.define("height", 660);
-//                                 } else if (window.innerWidth >= 768 && window.innerWidth <= 1024) {
-//                                     this.define("height", 600);
-//                                 } else {
-//                                     this.define("height", 700);
-//                                 }
-//                                 this.resize();
-//                             }
-//                         }
-//                     },
-//                     { template: "<h1>Other content<h1>", height: 400 },
-//                     { template: "<h1>footer</h1>", autoheight: true }
-//                 ]
-//             }
-//         });
     </script>
 </body>
 
