--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./codebase/webix.min.js"></script>
     <link rel="stylesheet" href="./codebase/webix.min.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <title>Document</title>
     <style>
         .footer {
@@ -23,6 +21,7 @@
 </head>
 
 <body>
+    <script src="./data.js"></script>
     <script>
         webix.ui({
             view: "scrollview",
@@ -70,5 +69,72 @@
         });
     </script>
 </body>
+
+<!-- body: {
+    rows: [
+        { template: "<h1>header</h1>", autoheight: true },
+        { template: "<h1>navigation</h1>", autoheight: true },
+        { template: "<h1>body</h1>", height: 800 },
+        { template: "<h1>Other content<h1>", height: 400 },
+        {
+            template: "<h1>footer</h1>",
+            id: "footer",
+            autoheight: true,
+            css: 'footer',
+            on: {
+                onAfterRender() {
+                    this.$view.style.top = `${window.innerHeight - this.$height}.px`;
+                    const self = this;
+
+                    $$("scrollview").$view.addEventListener('scroll', function (e) {
+                        const { x, y } = $$("scrollview").getScrollState();
+                        const height = window.innerHeight - self.$height + y;
+                        self.$view.style.top = `${height}px`
+                    })
+                }
+            }
+        }
+    ]
+},
+on: {
+    onAfterScroll() {
+        const { x, y } = this.getScrollState();
+        console.log(this._footerHeight)
+        const height = window.innerHeight - 60 + y;
+        $$('footer').$view.style.top = `${height}px`;
+    }
+}
+}); -->
+
+
+<!-- body: {
+    rows: [
+        { template: "<h1>header</h1>", autoheight: true },
+        { template: "<h1>navigation</h1>", autoheight: true },
+        { template: "<h1>body</h1>", height: 800 },
+        { template: "<h1>Other content<h1>", height: 400 },
+        {
+            template: "<h1>footer</h1>",
+            id: "footer",
+            autoheight: true,
+            css: 'footer',
+            on: {
+                onAfterRender() {
+                    console.log('rend')
+                    $$("scrollview")._footerHeight = this.$height;
+                    this.$view.style.top = `${window.innerHeight - this.$height}.px`;
+                }
+            }
+        }
+    ]
+},
+on: {
+    onAfterScroll() {
+        const { x, y } = this.getScrollState();
+        console.log(this._footerHeight)
+        const height = window.innerHeight - this._footerHeight + y;
+        $$('footer').$view.style.top = `${height}px`;
+    }
+} -->
 
 </html>
