--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./codebase/webix.min.js"></script>
-    <link rel="stylesheet" href="./codebase/webix.min.css">
+    <script src="./codebase/webix715.min.js"></script>
+    <link rel="stylesheet" href="./codebase/webix715.min.css">
     <title>Document</title>
     <style>
         .footer{
@@ -30,7 +30,7 @@
   scrollState: 0,
   body:{
      rows:[
-       {template:"<h5>Lorem ipsum</h5>", autoheight:true},
+       {template:"<h5>Lorem ipsum715</h5>", autoheight:true},
        {height: 1500, template: "<h4>just template with height: 900</h4>"},
        {
          template: `<div><h1>footer</h1></div>`,
