--- a/index.html
+++ b/index.html
@@ -30,17 +30,16 @@
   scrollState: 0,
   body:{
      rows:[
-       {template:"<h5>Lorem ipsum715</h5>", autoheight:true},
-       {height: 1500, template: "<h4>just template with height: 900</h4>"},
+       {template:"<h5>Lorem ipsum</h5>", autoheight:true},
+       {height: 900, template: "<h4>just template with height: 900</h4>"},
        {
          template: `<div><h1>footer</h1></div>`,
          id: 'footer',
          css: 'footer',
-         height: 50
+         height: 50 
        }
      ]
    }
-  }
 });
     </script>
 </body>
