--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./codebase/webix715.min.js"></script>
-    <link rel="stylesheet" href="./codebase/webix715.min.css">
+    <script src="./codebase/webix705.min.js"></script>
+    <link rel="stylesheet" href="./codebase/webix705.min.css">
     <title>Document</title>
     <style>
         .footer{
@@ -31,7 +31,7 @@
        {template:"<h5>Lorem ipsum1500</h5>", autoheight:true},
        {height: 1500, template: "<h4>just template with height: 1500</h4>"},
        {
-         template: `<div><h1>footer</h1></div>`,
+         template: `<div><h1>footer 705</h1></div>`,
          id: 'footer',
          css: 'footer',
          height: 50 
