--- a/index.html
+++ b/index.html
@@ -5,50 +5,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./codebase/webix715.min.js"></script>
-    <link rel="stylesheet" href="./codebase/webix715.min.css">
+    <script src="./codebase/webix.min.js"></script>
+    <link rel="stylesheet" href="./codebase/webix.min.css">
     <title>Document</title>
 </head>
 
 <body>
     <script>
-        function img(obj) {
-            return '<img src="' + obj.src + '" class="content" ondragstart="return false"/><div class="title">' + obj.title + '</div>'
-        }
-
-
         webix.ui({
             view: "scrollview",
             id: "scrollview",
             scroll: "y",
-            height: 500,
+            scrollSpeed: "300ms",
             body: {
                 rows: [
-                    { template: "<h1>header 715 </h1>", autoheight: true },
+                    { template: "<h1>header 703</h1>", autoheight: true },
                     { template: "<h1>navigation</h1>", autoheight: true },
+                    { template: "<h1>body</h1>", height: 800 },
                     {
-                        view: "carousel",
-                        id: "carousel",
-                        height: 300,
-                        cols: [
-                            { css: "image", template: img, data: { src: "http://docs.webix.com/samples/26_carousel/imgs/image001.jpg" } },
-                            { css: "image", template: img, data: { src: "http://docs.webix.com/samples/26_carousel/imgs/image002.jpg" } },
-                            { css: "image", template: img, data: { src: "http://docs.webix.com/samples/26_carousel/imgs/image003.jpg" } },
-                            { css: "image", template: img, data: { src: "http://docs.webix.com/samples/26_carousel/imgs/image004.jpg" } },
-                            { css: "image", template: img, data: { src: "http://docs.webix.com/samples/26_carousel/imgs/image005.jpg" } },
-                            { css: "image", template: img, data: { src: "http://docs.webix.com/samples/26_carousel/imgs/image006.jpg" } }
-                        ],
-                        navigation: {
-                            type: "side",
-                            items: false
-                        }
+                        template: `<div id="paymentIframe"><iframe src="https://www.bing.com/" frameborder="0" style="border:1; width:90%;height:600px;position:absolute;z-index:9999;" allowfullscreen=""></iframe></div>`,
+                        height: 600
                     },
-                    { template: "<h2>Other content height: 300;<h2>", height: 300 },
-                    { template: "<h1>footer</h1>", autoheight: true },
+                    { template: "<h1>Other content<h1>", height: 400 },
+                    { template: "<h1>footer</h1>", autoheight: true }
                 ]
             }
-        })
-
+        });
     </script>
 </body>
 </html>
