--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./codebase/webix715.min.js"></script>
+    <script src="./codebase/webix705.min.js"></script>
     <link rel="stylesheet" href="./codebase/webix715.min.css">
     <title>Document</title>
 </head>
@@ -19,7 +19,7 @@
             scrollSpeed: "300ms",
             body: {
                 rows: [
-                    { template: "<h1>header 715</h1>", autoheight: true },
+                    { template: "<h1>header 705 combo </h1>", autoheight: true },
                     { template: "<h1>navigation</h1>", autoheight: true },
                     { template: "<h1>body</h1>", height: 800 },
                     {
