--- a/index.html
+++ b/index.html
@@ -5,30 +5,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./codebase/webix705.min.js"></script>
-    <link rel="stylesheet" href="./codebase/webix715.min.css">
+    <script src="./codebase/webix.min.js"></script>
+    <link rel="stylesheet" href="./codebase/webix.min.css">
     <title>Document</title>
+    <style>
+        .fixed-footer {
+            background-color: cadetblue;
+            text-align: center;
+            position: fixed;
+            bottom: 0;
+        }
+
+        .hidden-footer {
+            background-color: cadetblue;
+            text-align: center;
+            display: none;
+            position: static;
+
+        }
+    </style>
 </head>
 
 <body>
     <script>
         webix.ui({
             view: "scrollview",
-            id: "scrollview",
             scroll: "y",
-            scrollSpeed: "300ms",
+            scrollState: 0,
             body: {
                 rows: [
-                    { template: "<h1>header 705 combo </h1>", autoheight: true },
-                    { template: "<h1>navigation</h1>", autoheight: true },
-                    { template: "<h1>body</h1>", height: 800 },
+                    { template: "<h5>Lorem ipsum</h5>", autoheight: true },
+                    { height: 1300, template: "<h4>just template with height: 1300</h4>", borderless: true },
                     {
-                        template: `<div id="paymentIframe"><iframe src="https://www.bing.com/" frameborder="0" style="border:1; width:90%;height:600px;position:absolute;z-index:9999;" allowfullscreen=""></iframe></div>`,
-                        height: 600
-                    },
-                    { template: "<h1>Other content<h1>", height: 400 },
-                    { template: "<h1>footer</h1>", autoheight: true }
+                        template: `<div><h1>footer</h1></div>`,
+                        id: 'footer',
+                        css: 'fixed-footer',
+                        autoheight: true
+                    }
                 ]
+            },
+            on: {
+                onAfterScroll() {
+                    const footer = $$('footer');
+                    const { x, y } = this.getScrollState();
+
+                    if (y > this.config.scrollState) {
+                        if (footer.$view.classList.contains("fixed-footer")) {
+                            console.log('hide');
+                            footer.$view.classList.remove("fixed-footer");
+                            footer.$view.classList.add("hidden-footer");
+                        }
+                    } else {
+                        if (footer.$view.classList.contains("hidden-footer")) {
+                            console.log('show');
+                            footer.$view.classList.remove("hidden-footer");
+                            footer.$view.classList.add("fixed-footer");
+                        }
+                    }
+                    this.config.scrollState = y;
+                }
             }
         });
     </script>
